--- a/src/routes/admin/estadistica.ejs
+++ b/src/routes/admin/estadistica.ejs
@@ -47,8 +47,10 @@
                 <article>
                     <h2>Conversion Monetaria</h2>
                     <div>
+                        <label for="Dolar">Dolar</label>
                         <input type="number" placeholder="$" id="Dolar">
                         <span>=</span>
+                        <label for="Bolivares">Bolivares</label>
                         <input type="number" placeholder="Bs" id="Bolivares">
                     </div>
                 </article>
