--- a/public/css/admin/inventario.css
+++ b/public/css/admin/inventario.css
@@ -39,13 +39,21 @@ main .Content .Inputs--seleccionados .Input--Container{
     align-items: center;
 }
 main .Content .Inputs--seleccionados .Input--Container input{
-    width: 230px;
     padding: 7px 8px;
     width: 300px;
     border: 2px solid #aaa;
     outline: none;
     border-radius: 15px;
 }
+
+input[type="search"]::-webkit-search-cancel-button {
+    -webkit-appearance: none;
+}
+
+input[type="search"]::-moz-search-cancel-button {
+    display: none;
+}
+
 main .Content .Inputs--seleccionados .Input--Container img{
     width: 25px;
     position: relative;
