--- a/public/css/user/chat.css
+++ b/public/css/user/chat.css
@@ -44,7 +44,11 @@
     flex: 1;
     overflow-y: auto;
     padding: 1em;
+}
 
+#messages div {
+    border-bottom: 1px solid #00000050;
+    padding: 0.5em;
 }
 
 #userInput {
