Producto Agregado Toast Index

--- a/src/routes/auth/register.ejs
+++ b/src/routes/auth/register.ejs
@@ -31,7 +31,7 @@
                     </div>
                     <div>
                         <label for="Cedula">Cedula</label>
-                        <input name="cedula" type="number" id="Cedula" placeholder="Ingrese su cedula">
+                        <input name="cedula" minlength="7" maxlength="8" type="number" id="Cedula" placeholder="Ingrese su cedula">
                     </div>
                 </div>
                 <div class="Input--Container">
