--- a/src/routes/index.ejs
+++ b/src/routes/index.ejs
@@ -77,6 +77,7 @@
 
     <%- include('./partials/footer') %>
     
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="/js/index.js"></script>
 </body>
 </html>
